Creado mediante Colaboratory

--- a/Simulacion/04_HilosDeEjecucion.ipynb
+++ b/Simulacion/04_HilosDeEjecucion.ipynb
@@ -6,7 +6,6 @@
       "name": "HilosdeEjecucion.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOI/sBrunZOd1mrHTzZJ3h2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Simulacion/04_HilosdeEjecucion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Simulacion/04_HilosDeEjecucion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,13 +34,14 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Hilos de Ejecución</i></h1>\n",
+        "  <h1 align=\"center\"><i>Hilos de ejecución</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
-        "  </font>"
+        "</font>"
       ]
     },
     {
@@ -50,7 +50,7 @@
         "id": "6AKv_wJQC1B8"
       },
       "source": [
-        "## **Introducción**\n",
+        "## Introducción\n",
         "\n",
         "Para esta presentación es bueno comenzar con una frase del mundo de la computación.\n",
         "\n",
@@ -81,10 +81,67 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "96Yf4M8Gu5Nl"
+      },
+      "source": [
+        "# Cómputo en paralelo\n",
+        "\n",
+        "El hardware se mejora constantemente y el día de mañana será más rápido que el día de hoy, así que como consecuencia de la **ley de Moore**, podríamos esperar a comprar una computadora más \"rápida\" y eficiente que la que tenemos actualmente. Sin embargo mediante programación en paralelo, se pueden optimizar y agilizar los algoritmos empleados actualmente.\n",
+        "\n",
+        "**Ley de Moore:**\n",
+        "\n",
+        "El número de **transistores** por unidad de superficie en circuitos integrados, se duplicará cada año. En consecuencia, la velocidad de cómputo relacionada directamente al hardware se verá duplicada cada año.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Imagenes/ComputoParalelo/moore.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Imagenes/ComputoParalelo/more2.jpg?raw=1\" width=\"900\"> \n",
+        "</center>\n",
+        "\n",
+        "Antes de continuar con más conceptos podemos aterrizar lo antes mencionado para poder identificar que tan ponente es un dispositivo de cómputo. Normalmente los algoritmos computacionales involucran diferentes tipos de operaciones lógicas o aritméticas, sin embargo es común medir las capacidades de un dispositivo de cómputo en términos de las **operaciones de punto flotante que puede realizar por segundo** (FLOPS).\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/nomen.png?raw=1\" width=\"600\">\n",
+        "</center> \n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/brontobyte.jpg?raw=1\" width=\"900\">\n",
+        "</center>\n",
+        "\n",
+        "Ahora que ya se tiene una idea de como medir las capacidades de cómputo de algún dispositivo, veamos la [lista](https://www.top500.org/lists/top500/2020/11/) de las computadoras más potentes a nivel mundial.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/top500.png?raw=1\" width=\"900\">\n",
+        "</center>\n",
+        "\n",
+        "De igual manera que los *FLOPS* son para los *CPU's*, tenemos los **GFLOPS** (operaciones de punto flontante por segundo dentro de un *GPU*) para los *GPU's*.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/GFLOPS.png?raw=1\" width=\"900\">\n",
+        "</center>\n",
+        "\n",
+        "Digamos que estos son los datos \"a la vista\" (como cuando se juega poker), sin embargo existen supercomputadoras de las cuales no se tienen datos ya que son dispositivos utilizados por organismos militares y por lo tanto sus características son clasificadas. Recordemos esta historia curiosa sobre el cómputo y la segunda guerra mundial, en la cual haciendo uso de **criptografía** y dispositivos de cómputo, **Alan Turing** logró hackear el código enigma y así se logró descifrar los mensajes enviados por los alemanes, algunas estimaciones dicen que este logro recortó la campaña militar de la segunda guerra mundial en 2 años.\n",
+        "\n",
+        "Hasta comienzos de los 90's todo se hacía de manera secuencial, incluso sistemas como *DOS* es un sistema monotarea. Más o menos hasta el año 2004 los desarrolladores de *CPU's* como *IBM*, *Intel* o *AMD* mejoraban sus dispositivos incrementando la **velocidad del reloj** (pulso eléctrico en el cual se actualizan los registros) y se paso de 16 MHZ hasta 466 MHZ o incluso más.\n",
+        "\n",
+        "Pero ya en 2004 era evidente que debido a las limitantes tecnológicas para incrementar las capacidades de cómputo se necesitaba buscar nuevas estrategias y una de estas nuevas estrategias fue la innovación de agregar **más núcleos dentro de una CPU**. Por ejemplo un *CPU* con dos núcleos trabajando a 200 MHZ pueden ejecutar más procesos que *CPU* con un solo núcleo a 300 MHZ.\n",
+        "\n",
+        "Para el año 2015 intel mostró su 8-core procesador, y posteriormente salieron al mercado procesadores de 10 núcleos, incluso en el mercado de equipos móviles se comenzó a ver un incremento en el número de núcleos dentro de cada *CPU*, así que los programadores no pudieron ignorar la necesidad de comprender el funcionamiento de la **programación en paralelo**.\n",
+        "\n",
+        "Adicionalmente a lo antes mencionado, los desarrolladores de hardware rápidamente se dieron cuenta que no era muy complicado realizar ciertas modificaciones en cada núcleo para que este ejecutara 2 'tareas' y de esta manera optimizar y compartir recursos como la memoria cache. Así que esto nos lleva a definir un concepto muy importante que aparecen tanto en un *CPU* como en un *GPU*, **¿qué es un hilo?**. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "PTX9W3gIC0zk"
       },
       "source": [
-        "##**Hilo de Ejecución**"
+        "# Hilo de Ejecución\n",
+        "\n",
+        "El concepto de hilo (Thread en ingles) es una idea básica para entender como funciona la multitarea y como es que podemos agilizar el desempeño de nuestras aplicaciones."
       ]
     },
     {
@@ -93,9 +150,7 @@
         "id": "Vqyp-VzgC0sR"
       },
       "source": [
-        "### Definición\n",
-        "\n",
-        "El concepto de hilo (Thread en ingles) es una idea básica para entender como funciona la multitarea y como es que podemos agilizar el desempeño de nuestras aplicaciones.\n",
+        "## Definición\n",
         "\n",
         "Hilo de Ejecución:Un Hilo es un trozo de código de nuestro programa que puede ser ejecutado al mismo tiempo que otro. Tambien conocido como proceso ligero, son un conjunto de tareas modulares que puede ser ejecutadas por el sistema operativo.\n",
         "\n",
@@ -108,7 +163,7 @@
         "id": "iG3HfgmlC0lJ"
       },
       "source": [
-        "### ¿Qué puede ejecutarse de manera simultánea?\n",
+        "## ¿Qué puede ejecutarse de manera simultánea?\n",
         "\n",
         "Vamos a poner el siguiente ejemplo, imaginemos que queremos ver un listado de 100 imágenes que se descargan desde Internet, **como usuario** ¿Cuál de las dos opciones siguientes elegirías?:\n",
         "\n",
