Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -936,17 +936,17 @@
         "\n",
         "Sea $\\lambda=100$ personas por hora y $\\mu=20$ personas atendidas cada $10$ minutos (es decir $120$ peronas por hora). Tratemos de ver que sucede con el sistema.\n",
         "\n",
-        "El **número promedio de clientes** que esperan en la fila está dado por:\n",
-        "$$L_{q}=\\frac{\\lambda^{2}}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{2\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
+        "El **número de clientes** que esperan en la fila está dado por:\n",
+        "$$L_{q}=\\frac{\\lambda^{2}}{\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
         "\n",
-        "El **tiempo promedio** que uncliente espera en la fila está dado por:\n",
-        "$$W_{q}=\\frac{\\lambda}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100}{2\\left(120\\right)\\left(120-100\\right)}=0.01\\,horas\\times\\frac{60min}{1hora}=0.6min\\frac{60seg}{1min}=36seg$$\n",
+        "El **tiempo que uncliente**  espera en la fila está dado por:\n",
+        "$$W_{q}=\\frac{\\lambda}{\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100}{\\left(120\\right)\\left(120-100\\right)}=0.01\\,horas\\times\\frac{60min}{1hora}=0.6min\\frac{60seg}{1min}=36seg$$\n",
         "\n",
-        "El **número promedio de clientes en el sistema** está dado por:\n",
-        "$$L_{s}=L_{q}+\\frac{\\lambda}{\\mu}=1.04+\\frac{100}{120}=1.87$$\n",
+        "El **número de clientes en el sistema** está dado por:\n",
+        "$$L_{s}=\\frac{\\lambda}{\\mu-\\lambda}=\\frac{100}{120-100}=\\frac{100}{20}=5$$\n",
         "\n",
-        "El **tiempo promedio que los clientes estan en el sistema**:\n",
-        "$$W_{s}=W_{q}+\\frac{1}{\\mu}=0.01+\\frac{100}{120}=0.02horas\\times\\frac{60min}{1hora}=1.2min\\times\\frac{60seg}{1min}=72seg$$"
+        "El **tiempo que los clientes eséran en el sistema**:\n",
+        "$$W_{s}=\\frac{1}{\\mu-\\lambda}=\\frac{1}{120-100}=\\frac{1}{20}=0.05\\,horas\\times\\frac{60min}{1hora}=3min\\frac{60seg}{1min}=180seg$$"
       ]
     },
     {
