Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -892,7 +892,7 @@
         "\n",
         "Es un sistema de filas de espera, con llegadas constantes, tiempo de servicio constante, con un servidor o fila de servicio.\n",
         "\n",
-        "Supongamos que $\\lambda$ es el **tiempo de llegada**, sea $\\lambda=5$ minutos, es decir cada $5$ minutos llega un cliente. Y sea $\\mu=4$ minutos el tiempo de servicio. Si nos detenemos a analizar un poco esta situación, dado que $\\lambda < \\mu$ esto significa que cada cliente es atendido antes de que llegue un cliente nuevo, por lo tanto no se forma una fila.\n",
+        "Supongamos que $\\lambda$ es el **tiempo de llegada**, sea $\\lambda=5$ minutos, es decir cada $5$ minutos llega un cliente. Y sea $\\mu=4$ minutos el **tiempo de servicio**. Si nos detenemos a analizar un poco esta situación, dado que $\\lambda < \\mu$ esto significa que cada cliente es atendido antes de que llegue un cliente nuevo, por lo tanto no se forma una fila.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/dd1.gif?raw=1\" width=\"600\"> \n",
@@ -912,6 +912,63 @@
         "*   Además de agiliza el tiempo de servicio, ¿se puede hacer algo más para evitar que los clientes esperen en la fila?\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Modelo $D/D/1/k-1$\n",
+        "\n",
+        "Este modelo es similar al modelo anterior, con la diferencia de que el parametro $k-1$ indica que el sistema tiene capacidad para $k-1$ clientes.\n",
+        "\n",
+        "De aquí en adelante suponemos $\\lambda >\\mu $, de otra forma no se forma una fila, como se menciono previamente.\n",
+        "\n",
+        "En este caso nos interesa conocer el estado del sistema en el instante $t$, es decir, conocer $N(t)$ y el tiempo que afecta al cliente $n$, es decir, $W_n$.\n",
+        "\n",
+        "El valor $N(t)$ denota el número de clientes en el sistema, es decir, el número de clientes en fila más el número de clientes que están siendo servidos en el instante $t$. Suponemos que en $t=0$ no hay clientes $(N(0)=0)$.\n",
+        "\n",
+        "Definimos $\\tau$ como el instante de tiempo en el que se produce el primer rechazo, es decir, llega un cliente cuando en el sistema ya hay $k-1$ clientes.\n",
+        "\n",
+        "Si $t\\in (0,\\frac{1}{\\lambda})$, no ha llegado todavía ningún cliente, por lo que en este intervalo de tiempo no hay clientes en el sistema.\n",
+        "\n",
+        "Si $t\\in (\\frac{1}{\\lambda}, \\tau)$, entonces $N(t)$ es igual al número de llegadas menos el número de salidas hasta $t$, donde:\n",
+        "\n",
+        "Número de llegadas hasta $t$ = $[\\frac{t}{\\frac{1}{\\lambda}}]=[\\lambda t]$\n",
+        "\n",
+        "Número de salidas hasta $t$ = $[\\frac{t-\\frac{1}{\\lambda}}{\\frac{1}{\\mu}}]=[ \\mu\n",
+        "t-\\frac{\\mu}{\\lambda}]$\n",
+        "\n",
+        "Por lo tanto $N(t)=[\\lambda t]-[ \\mu t-\\frac{\\mu}{\\lambda}]$\n",
+        "\n",
+        "Para $t\\ge \\tau$, vamos a restringirnos al caso más sencillo: el tiempo de servicio es un múltiplo entero del tiempo entre llegadas, es decir.\n",
+        "\n",
+        "$$m \\frac{1}{\\lambda}=\\frac{1}{\\mu}$$\n",
+        "\n",
+        "Suponiendo que se tiene disciplina **FIFO**, vamos a definir los valores asociados a cada cliente.\n",
+        "\n",
+        "$W_n=$ es el tiempo de espera en fila del cliente $n-esimo$.\n",
+        "\n",
+        "$S_n=$ es el tiempo del $n-esimo$ servicio.\n",
+        "\n",
+        "$T_n=$ es el tiempo entre la $n-esima$ y la $(n+1)-esima$ llegada aceptadas.\n",
+        "\n",
+        "Expresemos $W_{n+1}$ en función de $W_n$, $S_n$ y $T_n$.\n",
+        "\n",
+        "Si $W_n+S_n \\leq T_n$ entonces $W_{n+1}=0$.\n",
+        "\n",
+        "Si $W_n+S_n \\geq T_n$ entonces $W_{n+1}=W_n+S_n-T_n$.\n",
+        "\n",
+        "Además.\n",
+        "\n",
+        "$$S_n=\\frac{1}{\\mu}\\hspace{1cm} T_n=\\frac{1}{\\lambda}$$\n",
+        "\n",
+        "Finalmente.\n",
+        "\n",
+        "$$W_{n+1}=W_n + \\frac{1}{\\mu} - \\frac{1}{\\lambda}$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Bm3JNFCorxTs"
+      }
     },
     {
       "cell_type": "markdown",
@@ -936,16 +993,16 @@
         "\n",
         "Sea $\\lambda=100$ personas por hora y $\\mu=20$ personas atendidas cada $10$ minutos (es decir $120$ peronas por hora). Tratemos de ver que sucede con el sistema.\n",
         "\n",
-        "El **número de clientes** que esperan en la fila está dado por:\n",
+        "El **número de clientes que esperan en la fila** está dado por:\n",
         "$$L_{q}=\\frac{\\lambda^{2}}{\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
         "\n",
-        "El **tiempo que uncliente**  espera en la fila está dado por:\n",
+        "El **tiempo que un cliente espera en la fila** está dado por:\n",
         "$$W_{q}=\\frac{\\lambda}{\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100}{\\left(120\\right)\\left(120-100\\right)}=0.01\\,horas\\times\\frac{60min}{1hora}=0.6min\\frac{60seg}{1min}=36seg$$\n",
         "\n",
         "El **número de clientes en el sistema** está dado por:\n",
         "$$L_{s}=\\frac{\\lambda}{\\mu-\\lambda}=\\frac{100}{120-100}=\\frac{100}{20}=5$$\n",
         "\n",
-        "El **tiempo que los clientes eséran en el sistema**:\n",
+        "El **tiempo que los clientes espéran en el sistema**:\n",
         "$$W_{s}=\\frac{1}{\\mu-\\lambda}=\\frac{1}{120-100}=\\frac{1}{20}=0.05\\,horas\\times\\frac{60min}{1hora}=3min\\frac{60seg}{1min}=180seg$$"
       ]
     },
@@ -1058,6 +1115,7 @@
         "* [Teoría de filas](https://www.ecured.cu/Teor%C3%ADa_de_colas).\n",
         "* [Notación Kendall.](http://www.lcc.uma.es/~ezeqlr/ios/Tema5.pdf)\n",
         "* [Invesigación operativa.](https://idus.us.es/bitstream/handle/11441/77595/Esteban%20Vel%C3%A1zquez%20Gabriel%20TFG.pdf?sequence=1)\n",
+        "* [Modelos D/D/1.](https://www.um.es/or/ampliacion/node5.html)\n",
         "\n",
         "\n"
       ]
