Creado mediante Colaboratory

--- a/Simulacion/04_HilosDeEjecucion.ipynb
+++ b/Simulacion/04_HilosDeEjecucion.ipynb
@@ -130,7 +130,9 @@
         "\n",
         "Para el año 2015 intel mostró su 8-core procesador, y posteriormente salieron al mercado procesadores de 10 núcleos, incluso en el mercado de equipos móviles se comenzó a ver un incremento en el número de núcleos dentro de cada *CPU*, así que los programadores no pudieron ignorar la necesidad de comprender el funcionamiento de la **programación en paralelo**.\n",
         "\n",
-        "Adicionalmente a lo antes mencionado, los desarrolladores de hardware rápidamente se dieron cuenta que no era muy complicado realizar ciertas modificaciones en cada núcleo para que este ejecutara 2 'tareas' y de esta manera optimizar y compartir recursos como la memoria cache. Así que esto nos lleva a definir un concepto muy importante que aparecen tanto en un *CPU* como en un *GPU*, **¿qué es un hilo?**. "
+        "Adicionalmente a lo antes mencionado, los desarrolladores de hardware rápidamente se dieron cuenta que no era muy complicado realizar ciertas modificaciones en cada núcleo para que este ejecutara 2 'tareas' y de esta manera optimizar y compartir recursos como la memoria cache. Así que esto nos lleva a definir un concepto muy importante que aparecen tanto en un *CPU* como en un *GPU*, **¿qué es un hilo?**. \n",
+        "\n",
+        "Para una explicación más detallada revisar el siguiente [enlace](https://colab.research.google.com/github/jugernaut/ProgramacionEnParalelo/blob/main/Introduccion/05_Computo_en_paralelo_SCP.ipynb)."
       ]
     },
     {
@@ -214,7 +216,7 @@
       "source": [
         "!lscpu"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,6 +324,40 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Concurrente v.s. Paralelo\n",
+        "\n",
+        "¿Cuál es la diferencia entre concurrencia y\n",
+        "paralelismo?.\n",
+        "\n",
+        "Lo primero que hay que decir es: que el paralelismo es una forma de concurrencia; es decir, todo programa paralelo es concurrente.\n",
+        "\n",
+        "Una implementación secuencial es la forma tı́pica de solucionar un problema; sin embargo, esta técnica no siempre es la óptima.\n",
+        "\n",
+        "El algoritmo secuencial podrá resolver el problema, pero esto no es lo único que nos interesa, sino también en cuánto tiempo lo hace y cuánta memoria necesita. Una desventaja principal es que, no todo algoritmo secuencial puede convertirse a uno paralelo.\n",
+        "\n",
+        "En cómputo paralelo en lugar de usar un procesador para solucionar un problema, tendremos $n$ procesadores disponibles resolviendo el mismo problema.\n",
+        "\n",
+        "Ası́ el problema se estará resolviendo continuamente, no por intervalos de tiempo, como sucede en la concurrencia, por ello el tiempo invertido en resolver el problema se reduce.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/concurrenteparalelo.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "En esta imagen vemos como se distribuye el uso del procesador dependiendo del tipo de algoritmo que se este usando.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/tiempo.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "Y finalmente podemos ver la diferencia en tiempo de procesamiento de un algoritmo concurrente y uno en paralelo."
+      ],
+      "metadata": {
+        "id": "Fd5rWoyNqHkG"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "HYd2u88oDlXm"
       },
@@ -353,7 +389,271 @@
         "\n",
         "$$\\Psi\\leq\\frac{1}{f+(1-f)/p}$$\n",
         "\n",
-        "¿Qué interpretación le das a esta ley?."
+        "¿Qué interpretación le das a esta ley?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *threading*\n",
+        "\n",
+        "La biblioteca es un módulo de *Python* que nos permite hacer uso de hilos de manera muy sencilla, basta con importar esta biblioteca y usarla.\n",
+        "\n",
+        "La forma más sencilla de usar un `Thread` es crear una instancia con un función de destino y llamar a `start()` para que comience a funcionar."
+      ],
+      "metadata": {
+        "id": "0FIRMfGxslkp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import threading\n",
+        "\n",
+        "def trabajador():\n",
+        "  # esto es lo único que hace nuestro trabajador\n",
+        "  print('Trabajador')\n",
+        "\n",
+        "# se genera una lista de hilos\n",
+        "hilos = []\n",
+        "for i in range(5):\n",
+        "  # agregamos cada hilo a la lista\n",
+        "  t = threading.Thread(target=trabajador)\n",
+        "  hilos.append(t)\n",
+        "  # se ejecuta cada hilo, ¿de forma concurrente o en paralelo?.\n",
+        "  t.start()"
+      ],
+      "metadata": {
+        "id": "T5eUgNOWtr_C",
+        "outputId": "cd4ddf9f-5b0f-406b-ea07-6db5a419821f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Trabajador\n",
+            "Trabajador\n",
+            "Trabajador\n",
+            "Trabajador\n",
+            "Trabajador\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Esta forma es la forma más sencilla de hacer uso de hilos, sin embargo se esta realizando de manera funcional, es decir que no estamos haciendo uso de la POO.\n",
+        "\n",
+        "Otra forma de hacer uso de los hilos, es mediante POO en la cual vamos a crear una clase que herede de la clase `threading` y que sea capas de funcionar mediante hilos.\n",
+        "\n",
+        "Volvamos a ver el ejemplo del carrito de compras, a continuación se muestra la versión secuencial de la misma."
+      ],
+      "metadata": {
+        "id": "-CXQWFMVuIpo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "\n",
+        "# clase que ayuda a contener el nombre y articulos que compra un cliente\n",
+        "class Cliente(object):\n",
+        "\n",
+        "  def __init__(self, nombre):\n",
+        "    # nombre del cliente\n",
+        "    self.nombre = nombre\n",
+        "    # articulos que compro el cliente\n",
+        "    self.carrito = []\n",
+        "\n",
+        "# clase que simula el cobro que llevaria a cabo una empresa de compras en linea\n",
+        "class Amazon(object):\n",
+        "\n",
+        "  # VARIABLE DE CLASE O ESTATICA\n",
+        "  # diccionario con el catalogo de articulos y su precio\n",
+        "  catalogo = {'PS5':10000, 'Audifonos':2500, 'Halo':1500, 'HDD':900, \n",
+        "              'Laptop':25000, 'GTX1000':6000, 'SmartWatch':7500}\n",
+        "\n",
+        "  def __init__(self, nombre):\n",
+        "    self.nombre = nombre\n",
+        "\n",
+        "  # metodo que simula el cobro de un cliente\n",
+        "  def cobrar(self, cliente):\n",
+        "    # se revisa el carrito del cliente y el catalogo\n",
+        "    total = 0\n",
+        "    # cada articulo se cobra\n",
+        "    for articulo in cliente.carrito:\n",
+        "      print('Se cobra :',articulo, self.catalogo[articulo])\n",
+        "      # se hace una pausa de 2 segundos para simular el cobro\n",
+        "      time.sleep(2)\n",
+        "      # total almacena el total de los articulos del cliente\n",
+        "      total += self.catalogo[articulo]\n",
+        "    print('Total del cliente', cliente.nombre,':', total)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  inicio = time.time()\n",
+        "  cliente1 = Cliente('Mike')\n",
+        "  cliente1.carrito = ['PS5', 'SmartWatch', 'Audifonos']\n",
+        "\n",
+        "  amazon = Amazon('cobrador 1')\n",
+        "  amazon.cobrar(cliente1)\n",
+        "\n",
+        "  cliente2 = Cliente('Ivan')\n",
+        "  cliente2.carrito = ['GTX1000', 'HDD', 'GTX1000', 'Laptop']\n",
+        "\n",
+        "  amazon.cobrar(cliente2)\n",
+        "\n",
+        "  cliente3 = Cliente('Jonathan')\n",
+        "  cliente3.carrito = ['Laptop', 'PS5', 'Audifonos', 'Halo', 'HDD',\n",
+        "                      'GTX1000', 'SmartWatch']\n",
+        "\n",
+        "  amazon.cobrar(cliente3)\n",
+        "  fin = time.time()\n",
+        "\n",
+        "  print(\"Este algoritmo tomo: \", (fin-inicio)*1000)\n"
+      ],
+      "metadata": {
+        "id": "fjUewaCtyvDi",
+        "outputId": "782adb51-eebe-4e12-800d-58e0fe243b3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Se cobra : PS5 10000\n",
+            "Se cobra : SmartWatch 7500\n",
+            "Se cobra : Audifonos 2500\n",
+            "Total del cliente Mike : 20000\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : HDD 900\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : Laptop 25000\n",
+            "Total del cliente Ivan : 37900\n",
+            "Se cobra : Laptop 25000\n",
+            "Se cobra : PS5 10000\n",
+            "Se cobra : Audifonos 2500\n",
+            "Se cobra : Halo 1500\n",
+            "Se cobra : HDD 900\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : SmartWatch 7500\n",
+            "Total del cliente Jonathan : 53400\n",
+            "Este algoritmo tomo:  28039.95394706726\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Y en la siguiente celda se muestra la versión concurrente (en paralelo si el h.w. lo permite)."
+      ],
+      "metadata": {
+        "id": "7ogMZtvnyhbe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import threading\n",
+        "import time\n",
+        "\n",
+        "# clase que ayuda a contener el nombre y articulos que compra un cliente\n",
+        "class Cliente(object):\n",
+        "\n",
+        "  def __init__(self, nombre):\n",
+        "    # nombre del cliente\n",
+        "    self.nombre = nombre\n",
+        "    # articulos que compro el cliente\n",
+        "    self.carrito = []\n",
+        "\n",
+        "class Amazon(threading.Thread):\n",
+        "\n",
+        "  # VARIABLE DE CLASE O ESTATICA\n",
+        "  # diccionario con el catalogo de articulos y su precio\n",
+        "  catalogo = {'PS5':10000, 'Audifonos':2500, 'Halo':1500, 'HDD':900, \n",
+        "              'Laptop':25000, 'GTX1000':6000, 'SmartWatch':7500}\n",
+        "\n",
+        "  def __init__(self, nombre, cliente):\n",
+        "    super(Amazon, self).__init__()\n",
+        "    self.nombre = nombre\n",
+        "    self.cliente = cliente\n",
+        "\n",
+        "  '''def run(self):\n",
+        "      # esto es lo único que hace nuestro trabajador\n",
+        "      print('Trabajador')'''\n",
+        "\n",
+        "  # metodo que simula el cobro de un cliente\n",
+        "  def run(self):\n",
+        "    # se revisa el carrito del cliente y el catalogo\n",
+        "    total = 0\n",
+        "    # cada articulo se cobra\n",
+        "    for articulo in self.cliente.carrito:\n",
+        "      print('Se cobra :',articulo, self.catalogo[articulo])\n",
+        "      # total almacena el total de los articulos del cliente\n",
+        "      total += self.catalogo[articulo]\n",
+        "    print('Total del cliente', self.cliente.nombre,':', total)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  inicio = time.time()\n",
+        "  cliente1 = Cliente('Mike')\n",
+        "  cliente1.carrito = ['PS5', 'SmartWatch', 'Audifonos']\n",
+        "\n",
+        "  cliente2 = Cliente('Ivan')\n",
+        "  cliente2.carrito = ['GTX1000', 'HDD', 'GTX1000', 'Laptop']\n",
+        "\n",
+        "  cliente3 = Cliente('Jonathan')\n",
+        "  cliente3.carrito = ['Laptop', 'PS5', 'Audifonos', 'Halo', 'HDD',\n",
+        "                      'GTX1000', 'SmartWatch']\n",
+        "\n",
+        "  amazon1 = Amazon(\"Trabajador 1\", cliente1)\n",
+        "  amazon1.start()\n",
+        "\n",
+        "  amazon2 = Amazon(\"Trabajador 2\", cliente2)\n",
+        "  amazon2.start()\n",
+        "\n",
+        "  amazon3 = Amazon(\"Trabajador 3\", cliente3)\n",
+        "  amazon3.start()\n",
+        "  fin = time.time()\n",
+        "  print(\"Este algoritmo tomo: \", (fin-inicio)*1000)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zVXgevhrurun",
+        "outputId": "63253dc1-17f6-448c-a8e0-3042b28f8b5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Se cobra : Se cobra : PS5GTX1000 6000\n",
+            "Se cobra : HDD 900\n",
+            "Se cobra : GTX1000 Se cobra : Laptop 25000Este algoritmo tomo:  4.626750946044922\n",
+            "10000\n",
+            "Se cobra : SmartWatch 7500\n",
+            "Se cobra : Audifonos 2500\n",
+            "Total del cliente Mike : 20000\n",
+            " 6000\n",
+            "Se cobra : Laptop 25000\n",
+            "Total del cliente Ivan : 37900\n"
+          ]
+        }
       ]
     },
     {
