Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -1038,9 +1038,9 @@
         "\n",
         "Responde las siguientes preguntas:\n",
         "\n",
-        "*   ¿Cuál es el tiempo promedio que un cliente pasa en el sistema?\n",
-        "*   ¿Cuál es número promedio de clientes en la fila?\n",
-        "*   ¿Cuál es el número promedio de cliente en el sistema?\n",
+        "*   ¿Cuál es el tiempo que un clientes pasa en el sistema?\n",
+        "*   ¿Cuál es número de clientess en la fila?\n",
+        "*   ¿Cuál es el número de clientes en el sistema?\n",
         "*   ¿Qué tipo de modelo es este?\n",
         "\n"
       ]
