Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -892,7 +892,7 @@
         "\n",
         "Es un sistema de filas de espera, con llegadas constantes, tiempo de servicio constante, con un servidor o fila de servicio.\n",
         "\n",
-        "Supongamos que $\\lambda$ es el **tiempo de llegada**, sea $\\lambda=5$ minutos, es decir cada $5$ minutos llega un cliente. Y sea $\\mu=4$ minutos el **tiempo de servicio**. Si nos detenemos a analizar un poco esta situación, dado que $\\lambda < \\mu$ esto significa que cada cliente es atendido antes de que llegue un cliente nuevo, por lo tanto no se forma una fila.\n",
+        "Supongamos que $\\lambda$ es el **tiempo de llegada**, sea $\\lambda=5$ minutos, es decir cada $5$ minutos llega un cliente. Y sea $\\mu=4$ minutos el **tiempo de servicio**. Si nos detenemos a analizar un poco esta situación, dado que $\\lambda > \\mu$ esto significa que cada cliente es atendido antes de que llegue un cliente nuevo, por lo tanto no se forma una fila.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/dd1.gif?raw=1\" width=\"600\"> \n",
@@ -900,7 +900,7 @@
         "\n",
         "Modelos que funcionan de esta forma son por ejemplo las **lineas de ensamblaje**, donde se tienen patrones de llegada y de servicio deterministas y no se forman filas.\n",
         "\n",
-        "Sin embargo vale la pena preguntarnos ¿qué sucede si $\\lambda > \\mu$?, esta situación se muestra a continuación.\n",
+        "Sin embargo vale la pena preguntarnos ¿qué sucede si $\\lambda < \\mu$?, esta situación se muestra a continuación.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/dd1espera.gif?raw=1\" width=\"600\"> \n",
@@ -1038,9 +1038,9 @@
         "\n",
         "Responde las siguientes preguntas:\n",
         "\n",
-        "*   ¿Cuál es el tiempo que un clientes pasa en el sistema?\n",
-        "*   ¿Cuál es número de clientess en la fila?\n",
-        "*   ¿Cuál es el número de clientes en el sistema?\n",
+        "*   ¿Cuál es el tiempo promedio que un cliente pasa en el sistema?\n",
+        "*   ¿Cuál es número promedio de clientes en la fila?\n",
+        "*   ¿Cuál es el número promedio de cliente en el sistema?\n",
         "*   ¿Qué tipo de modelo es este?\n",
         "\n"
       ]
